# brp-kennisgevingen-api

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test-open-api-spec.yml
src/: Dockerfile  Makefile  get-token.py  initialize_db.sh  manage.py  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg
src/brp_kennisgevingen/: models.py  settings.py  urls.py  views.py  wsgi.py
src/brp_kennisgevingen/api/: authentication.py  exceptions.py  middleware.py  permissions.py  serializers.py  urls.py  utils.py  views.py
src/brp_kennisgevingen/fixtures/: kennisgevingen.json
src/brp_kennisgevingen/kennisgevingen/: authentication.py  serializers.py  urls.py  utils.py  views.py
src/brp_kennisgevingen/management/commands/: update_mock_records.py
src/brp_kennisgevingen/migrations/: 0001_initial.py  0002_newresident_birthdate.py  0003_alter_subscription_end_date.py  0003_subscription_created_at_subscription_updated_at.py  0004_subscription_created_at_subscription_updated_at.py  0005_alter_newresident_birthdate.py  0006_bsnchange.py  0006_bsnupdate.py  0007_alter_bsnchange_new_bsn_alter_bsnchange_old_bsn.py  0008_remove_bsnchange_application_id.py  0009_alter_bsnchange_valid_from.py  0010_remove_bsnchange_id_alter_bsnchange_old_bsn.py
src/brp_kennisgevingen/openapi/: preprocessors.py  schema.py
src/tests/: conftest.py  settings.py  test_health_check.py  utils.py
src/tests/test_api/: test_utils.py  test_views.py
