[metadata]
name = brp-kennisgevingen-api
version = 0.1
description = Subscription API for notifications on changes to persons
long_description = An API to subscribe to notification on changes to persons. Should be used in combination with Haal
                   Centraal Proxy API.
url = https://api.data.amsterdam.nl/brp-kennisgevingen/
author = Amsterdam Datapunt
author_email = datapunt@amsterdam.nl
license = European Union Public Licence Version 1.2
classifiers =
    Environment :: Web Environment
Framework :: Django
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    License :: OSI Approved :: European Union Public Licence
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
[options]
include_package_data = true
packages =
    brp_kennisgevingen
